# tideman-ssvm

./: Cargo.toml  Dockerfile  README.md  next.config.js  package-lock.json  package.json
components/: Header.js  StartModal.js  VotingCard.js  WinnerModal.js
pages/: index.js
pages/api/: tideman.js
src/: lib.rs
