[package]
name = "tideman-ssvm"
version = "0.1.0"
authors = ["cyanic"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.ssvmup.profile.release]
wasm-opt = ['-O4']

[lib]
name = "tideman_lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "=0.2.61"
